LU-4717 clio: support vfs_fadvise

vfs_fadvise() askes file contents to be read in page cache, which
is not a complete IO from Lustre's POV, Lustre CLIO needs an active
IO to protect the page.

This patch fakes a IO in this case, and enqueues necessary lock for
the page to be read.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: Iab3133ecc08cf0890ab3aa55018565d3d9f96e07